--- a/01.typewriter/styles.css
+++ b/01.typewriter/styles.css
@@ -1,10 +1,10 @@
 p {
     font-family: monospace;
     border-right: 4px solid;
-    width: 13ch;
+    width: 14ch;
     white-space: nowrap;
     overflow:hidden;
-    animation: typing 2s steps(13),
+    animation: typing 4s steps(14) infinite,
     blinking 0.5s infinite step-end alternate;
 
 }
