--- a/03.button-neon/neon.css
+++ b/03.button-neon/neon.css
@@ -1,34 +1,37 @@
 @font-face {
-    font-family: 'Patron';
-    src: url(Patron.otf);
+    font-family: 'Patron',sans-serif;
 }
+
 * {
     margin: 0;
     padding: 0;
 }
+
 body {
     width: 100%;
     height: 100vh;
-    background: rgb(133, 133, 216);
+    background: rgb(225, 225, 225);
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 button {
     font-family: 'Patron';
     cursor: pointer;
     outline: none;
     font-size: 25px;
     padding: 10px 28px;
-    border-radius: 15px;
+    border-radius: 25px;
     background: none;
     transition: box-shadow 0.1s;
-    color: rgb(255, 255, 255);
-    border: 2px solid rgb(255, 255, 255);
+    color: rgb(000, 000, 000);
+    border: 2px solid rgb(000, 000, 000);
 }
+
 button:hover {
-    border: 4px solid #fff
-    color: #fff;
-    box-shadow: 0px 0px 35px #fff, 0px 0px 15px inset;
-    text-shadow: 0px 0px 10px #fff, 0px 0px 3px #fff;
+    border: 2px solid #000000;
+    color: #000000;
+    box-shadow: 0px 0px 35px #000000, 0px 0px 15px inset;
+    text-shadow: 0px 0px 10px #000000, 0px 0px 3px #000000;
 }
